# Voco

./: .gitignore  .prettierrc  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  randompick.html  select.html  tsconfig.json  turbo.json  vite.config.ts
.github/workflows/: publish.yml
.trae/specs/impl-random-picker/: checklist.md  spec.md  tasks.md
apps/desktop/: .gitignore  Cargo.toml  package.json  tauri.conf.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: lib.rs  main.rs
apps/web/: components.json  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
docs/: voco-spec.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  select.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src/assets/: main.css
src/components/: PackageItem.vue  ScrollContainer.vue
src/layouts/: MyHeader.vue
src/modules/data/: constructor.ts  utils.ts
src/modules/i18n/: index.ts
src/modules/router/: index.ts
src/modules/stores/: packageInfoStore.ts  settingsStore.ts  wordbankStore.ts
src/modules/tauri/: fs.ts
src/page/: Home.vue  Play.vue  Settings.vue
src/shared/components/: ToastController.vue  ToastItem.vue  index.ts
src/shared/layouts/: MyFooter.vue  MyHeader.vue  index.ts
src/shared/modules/: index.ts
src/shared/types/: index.ts
src/types/: packageInfo.ts  wordbank.ts
src/utils/: randomChar.ts
src/windows/main/: App.vue  main.ts
src/windows/randompick/: App.vue  main.ts
(+62 files in other folders)
