[package]
name = "voco-desktop"
version = "0.1.0"
description = "Voco - Vocabulary Challenge App"
authors = ["NEOXRA Studios"]
edition = "2021"

[lib]
name = "voco_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
voco-io = { path = "../../packages/io" }
